added api & some features

--- a/panel/public/css/global.css
+++ b/panel/public/css/global.css
@@ -79,6 +79,11 @@ button.secondary {
     color: var(--button-text-secondary);
 }
 
+button.danger {
+    background-color: var(--danger-background);
+    color: var(--danger);
+}
+
 /* ======== MENU ======== */
 
 .dashboard {
