--- a/panel/views/bots.hbs
+++ b/panel/views/bots.hbs
@@ -19,11 +19,159 @@
         <div class="main">
             <div class="title">
                 <h2>Bots</h2>
+            </div>
 
-                {{bots}}
+            <div class="remove-container">
+                <div class="remove">
+                    Remove bots that have not pinged for more than 5 days
+                    <a href="/panel/remove"><button class="danger">Remove</button></a>
+                </div>
+            </div>
+
+            <div class="bots-container">
+                <div class="table">
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>HOSTNAME</td>
+                                <td>IP</td>
+                                <td>COUNTRY</td>
+                                <td>AV</td>
+                                <td>OS</td>
+                                <td>LASTPING</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each bots}}
+                            <tr>
+                                <td>{{hostname}}</td>
+                                <td>{{ip}}</td>
+                                <td>{{country}}</td>
+                                <td>{{av}}</td>
+                                <td>{{os}}</td>
+                                <td>{{toLocal lastPing}}</td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
+
+    <style>
+        /* ==== BOTS ==== */
+        .bots-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 1rem;
+            width: calc((100% - 22rem));
+        }
+
+        .remove-container {
+            width: calc((100% - 22rem));
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: large;
+            color: #ccc;
+        }
+
+        .remove {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            background-color: var(--background-light);
+            padding: 1rem 0.5rem 1rem 0.5rem;
+            border-radius: 15px;
+            margin-top: 2rem;
+        }
+
+        .table {
+            margin-top: 1rem;
+            width: 98%;
+        }
+
+        .table table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        .table thead tr {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            background-color: var(--background-light);
+            padding: 10px 15px 10px 15px;
+            border-radius: 15px 15px 0px 0px;
+        }
+
+        .table thead tr td {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 0.6rem;
+        }
+
+        .table tbody tr {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 1rem;
+            padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
+            background-color: #2B3545;
+            letter-spacing: 0.06rem;
+            cursor: pointer;
+            padding: 10px 15px 10px 15px;
+            height: 20px;
+        }
+
+        .table tbody tr:last-child {
+            border-radius: 0px 0px 15px 15px;
+        }
+
+        .table tbody tr td {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .table tbody tr,
+        .table thead tr {
+            width: 100%;
+        }
+
+        .table tbody tr > td,
+        .table thead tr > td {
+            width: 16%;
+        }
+
+        .table .delete {
+            color: var(--danger);
+            background-color: var(--danger-background);
+            padding: 2px;
+            border-radius: 10px;
+        }
+
+        /* ==== MEDIA QUERY ==== */
+        @media (max-width: 850px) {
+            .bots-container {
+                width: calc((100% - 5rem));
+            }
+
+            .main {
+                width: 100% !important;
+            }
+        }
+    </style>
 
 </body>
 
