--- a/panel/views/tasks.hbs
+++ b/panel/views/tasks.hbs
@@ -10,6 +10,7 @@
     <meta name="description" content="" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/tasks.css">
 
 </head>
 
@@ -83,242 +84,6 @@
             </div>
         </div>
     </div>
-
-    <style>
-        /* ==== TASKS ==== */
-        .tasks-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin-top: 1rem;
-            width: calc((100% - 22rem));
-        }
-
-        .task {
-            width: 40rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: var(--background-light);
-            gap: 1.2rem;
-            padding-bottom: 1rem;
-            border-radius: 15px;
-            background-color: var(--background-light);
-        }
-
-        .task .title {
-            padding-top: 1rem;
-            margin-left: 1rem;
-            font-size: 17px;
-            color: #ccc;
-            font-weight: 600;
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-        }
-
-        .task form {
-            width: 90%;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .task form .form-control {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0.3rem;
-            width: 100%;
-            cursor: pointer;
-        }
-
-        .table {
-            margin-top: 1rem;
-            width: 98%;
-        }
-
-        .table table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        .table thead tr {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            background-color: var(--background-light);
-            padding: 10px 15px 10px 15px;
-            border-radius: 15px 15px 0px 0px;
-        }
-
-        .table thead tr td {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            gap: 0.6rem;
-        }
-
-        .table tbody tr {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            gap: 1rem;
-            padding-top: 0.5rem;
-            padding-bottom: 0.5rem;
-            background-color: #2B3545;
-            letter-spacing: 0.06rem;
-            cursor: pointer;
-            padding: 10px 15px 10px 15px;
-        }
-
-        .table tbody tr:last-child {
-            border-radius: 0px 0px 15px 15px;
-        }
-
-        .table tbody tr td {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .table tbody tr,
-        .table thead tr {
-            width: 100%;
-        }
-
-        .table tbody tr > td,
-        .table thead tr > td {
-            width: 16%;
-        }
-
-        .table .delete {
-            color: var(--danger);
-            background-color: var(--danger-background);
-            padding: 2px;
-            border-radius: 10px;
-        }
-
-        .info {
-            color: var(--warning);
-            width: 85%;
-            background-color: var(--warning-background);
-            padding: 10px;
-            border-radius: 15px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            gap: 0.5rem;
-        }
-
-        /* ==== INPUTS ==== */
-        .input-group {
-            position: relative;
-            display: flex;
-            align-items: center;
-            width: 100%;
-        }
-
-        .input-group input:focus::placeholder {
-            color: transparent;
-        }
-
-        .input-group:focus-within>label {
-            opacity: 100;
-            top: -0.5em;
-            z-index: 1;
-        }
-
-        .input-group input:valid+label {
-            opacity: 100;
-            top: -0.5em;
-            z-index: 1;
-        }
-
-        .input-group>label {
-            opacity: 0;
-            z-index: -1;
-            position: absolute;
-            top: 0.5em;
-            left: 1em;
-            transition: all 0.3s ease-in-out;
-            padding: 0 0.2em;
-            background-color: var(--background-light);
-        }
-
-        .input-group input {
-            width: 100% !important;
-        }
-
-        form input[type="checkbox"] {
-            background-color: transparent;
-        }
-
-        form input[type="text"] {
-            height: 1.8rem;
-        }
-
-        form input[type="text"] {
-            border: none;
-            border: 2px solid var(--font-secondary);
-            background: transparent;
-            outline: none;
-            font-size: 15px;
-            padding: 0.3rem;
-            border-radius: 15px;
-            color: #ccc;
-            width: 100%;
-            padding-left: 10px;
-
-            transition: all 0.4s ease-in-out;
-        }
-
-        form input[type="text"]:focus {
-            border: 2px solid var(--font-primary);
-        }
-
-        select {
-            width: 100%;
-            padding: 0.5rem;
-            border: 2px solid var(--font-secondary);
-            font-size: 15px;
-            color: #ccc;
-            background-color: var(--background-light);
-            border-radius: 10px;
-        }
-
-        option {
-            font-size: 15px;
-            color: var(--font-secondary);
-        }
-
-        /* ==== MEDIA QUERY ==== */
-        @media (max-width: 850px) {
-            .tasks-container {
-                width: calc((100% - 5rem));
-            }
-
-            .main {
-                width: 100% !important;
-            }
-
-            .task {
-                width: 18rem !important;
-            }
-        }
-
-        @media (max-width: 1200px) {
-            .task {
-                width: 25rem;
-            }
-        }
-    </style>
 
 </body>
 
