--- a/panel/public/css/bots.css
+++ b/panel/public/css/bots.css
@@ -89,7 +89,22 @@
 
 .table tbody tr > td,
 .table thead tr > td {
-    width: 16%;
+    width: 14%;
+    text-align: center;
+}
+
+.table tbody tr > td {
+    font-size: 15px;
+}
+
+.table thead tr td:nth-child(2),
+.table tbody tr td:nth-child(2) {
+    width: 8%;
+}
+
+.table thead tr td:nth-child(6),
+.table tbody tr td:nth-child(6) {
+    width: 20%;
 }
 
 .table .delete {
@@ -99,13 +114,56 @@
     border-radius: 10px;
 }
 
+#online {
+    background-color: green;
+    padding: 0.5rem;
+    border-radius: 50%;
+}
+
+#offline {
+    background-color: red;
+    padding: 0.5rem;
+    border-radius: 50%;
+}
+
 /* ==== MEDIA QUERY ==== */
 @media (max-width: 850px) {
+    .remove-container {
+        width: calc((100% - 5rem)) !important;
+    }
+
     .bots-container {
-        width: calc((100% - 5rem));
+        width: calc((100% - 5rem)) !important;
+    }
+
+    button {
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .main {
         width: 100% !important;
+    }
+}
+
+@media (max-width: 1250px) {
+    .table thead tr td:nth-child(2),
+    .table tbody tr td:nth-child(2) {
+        display: none;
+    }
+
+    .table thead tr td:nth-child(3),
+    .table tbody tr td:nth-child(3) {
+        display: none;
+    }
+
+    .table thead tr td:nth-child(4),
+    .table tbody tr td:nth-child(4) {
+        display: none;
+    }
+
+    .table thead tr td:nth-child(5),
+    .table tbody tr td:nth-child(5) {
+        display: none;
     }
 }
